flapivor/tests/m1/hopix/parser/bad/103-ref-5.hopix
val main =
  val y = ref "foo";
  ref